--- a/IPCA-Compliance-Safety/backend-php/Dockerfile
+++ b/IPCA-Compliance-Safety/backend-php/Dockerfile
@@ -7,14 +7,17 @@ WORKDIR /var/www/html
 COPY . /var/www/html
 RUN chown -R www-data:www-data /var/www/html
 
-# Force Apache to serve /public
+# Force Apache to serve /public (where your index.php is)
 RUN printf '%s\n' \
 '<VirtualHost *:80>' \
-'    DocumentRoot /var/www/html/public' \
-'    <Directory /var/www/html/public>' \
-'        AllowOverride All' \
-'        Require all granted' \
-'    </Directory>' \
+'  ServerName localhost' \
+'  DocumentRoot /var/www/html/public' \
+'  DirectoryIndex index.php index.html' \
+'  <Directory /var/www/html/public>' \
+'    Options FollowSymLinks' \
+'    AllowOverride None' \
+'    Require all granted' \
+'  </Directory>' \
 '</VirtualHost>' \
 > /etc/apache2/sites-available/000-default.conf
 
